# internal-support-assistant

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  smoke_test.py
data/knowledge_base/: access-requests.md  deployments.md  getting-started.md  onboarding.md  runbook-incidents.md  service-accounts.md  vpn-and-network.md
data/tickets/: tickets.json
docker/: Dockerfile  docker-compose.yml
evals/: metrics.py  run_evals.py  testset.yaml
src/: cli.py  config.py  llm.py
src/agent/: answer.py  prompts.py
src/ingest/: chunker.py  loader.py  pipeline.py
src/retrieval/: search.py
src/slack/: __main__.py  bot.py
src/web/: __main__.py  app.py
